# encoins-frontend-v2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  encoins-frontend-v2.cabal
app/: Main.hs
src/I18n/: App.hs  Common.hs  Dao.hs  I18n.hs  Landing.hs
src/L18n/: App.hs  L18n.hs  Landing.hs
