cabal-version:      3.0
name:               encoins-frontend-v2
version:            0.1.0.0
homepage:           encoins.io
license:            Apache-2.0
license-file:       LICENSE
author:             Vladimir Sinyakov, Vladislav Sabanov
maintainer:         team@encoins.io
extra-source-files:
  CHANGELOG.md
  README.md

library
  ghc-options:      -Wall -Wno-unrecognised-pragmas
  exposed-modules:  L18n.Landing
  build-depends:    base ^>=4.12.0.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable encoins-frontend-v2
  main-is:          Main.hs
  build-depends:
    , base                 ^>=4.12.0.0
    , encoins-frontend-v2

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite encoins-frontend-v2-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base ^>=4.12.0.0
